--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "service-agent"
 version = "0.1.0"
-description = "Add your description here"
+description = "A service agent for managing and interacting with various services."
 readme = "README.md"
 requires-python = ">=3.13.3"
 dependencies = [
